--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Factly</string>
+
+    <!-- App strings -->
+    <string name="welcome">Hello World!</string>
 </resources>
