Added coarse location tracking
Coarse lat/long can be retrieved through LocationConnectionManager, as
a demonstration of this, the MainActivity will show the device location,
updated every 20 seconds. Went with coarse location over granular because
the app will eventually need to calculate the zip code, and that doesn't
require such accuracy.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,6 @@
     <string name="app_name">Factly</string>
 
     <!-- App strings -->
-    <string name="welcome">Hello World!</string>
+    <string name="latitudeText">Latitude: </string>
+    <string name="longitudeText">Longitude: </string>
 </resources>
